minor issues wrt. SonarQube in applications